using data::Load

--- a/reinforcement_learning_gym/bipedal_walker_sac.ipynb
+++ b/reinforcement_learning_gym/bipedal_walker_sac.ipynb
@@ -182,19 +182,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "using namespace std;\n",
-    "vector<double> q;\n",
-    "ifstream readq(\"sac_q.txt\");\n",
-    "copy(istream_iterator<double>(readq), {}, back_inserter(q));\n",
-    "vector<double> policy;\n",
-    "ifstream readpolicy(\"sac_policy.txt\");\n",
-    "copy(istream_iterator<double>(readpolicy), {}, back_inserter(policy));\n",
-    "qNetwork.Parameters() = arma::conv_to<arma::mat>::from(q).t();\n",
-    "policyNetwork.Parameters() = arma::conv_to<arma::mat>::from(policy).t();"
+    "arma::mat temp;\n",
+    "data::Load(\"sac_q.txt\", temp);\n",
+    "qNetwork.Parameters() = temp.t();\n",
+    "data::Load(\"sac_policy.txt\", temp);\n",
+    "policyNetwork.Parameters() = temp.t();"
    ]
   },
   {
@@ -281,31 +277,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " Total steps: 1101\t Total reward: 253.837\n",
-      "https://gym.kurg.org/5698195b0ba34/output.webm"
+      " Total steps: 1092\t Total reward: 255.508\n"
      ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6b58440911af43e6822cf29d4a75ac0c",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "A Jupyter widget"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
