Change function name to adapt style guidline for cpp and notebook
Signed-off-by: Omar Shrit <omar@shrit.me>

--- a/reinforcement_learning_gym/acrobot_dqn/acrobot_dqn.ipynb
+++ b/reinforcement_learning_gym/acrobot_dqn/acrobot_dqn.ipynb
@@ -205,7 +205,7 @@
    "outputs": [],
    "source": [
     "// Function to train the agent on the Acrobot-v1 gym environment.\n",
-    "void train(const size_t numSteps)\n",
+    "void Train(const size_t numSteps)\n",
     "{\n",
     "  agent.Deterministic() = false;\n",
     "  std::cout << \"Training for \" << numSteps << \" steps.\" << std::endl;\n",
@@ -307,7 +307,7 @@
    ],
    "source": [
     "// Training the agent for a total of at least 25000 steps.\n",
-    "train(25000)"
+    "Train(25000)"
    ]
   },
   {
