--- a/reinforcement_learning_gym/lunar_lander_dqn/lunar_lander_dqn.ipynb
+++ b/reinforcement_learning_gym/lunar_lander_dqn/lunar_lander_dqn.ipynb
@@ -203,7 +203,7 @@
    "outputs": [],
    "source": [
     "// Function to train the agent on the gym implementation of LunarLander environment.\n",
-    "void train(const size_t numSteps)\n",
+    "void Train(const size_t numSteps)\n",
     "{\n",
     "  agent.Deterministic() = false;\n",
     "  std::cout << \"Training for \" << numSteps << \" steps.\" << std::endl;\n",
@@ -280,7 +280,7 @@
    ],
    "source": [
     "// Training the agent for a total of at least 10000 steps.\n",
-    "train(10000)"
+    "Train(10000)"
    ]
   },
   {
@@ -437,7 +437,7 @@
    ],
    "source": [
     "// Training the same agent for a total of at least 100000 steps.\n",
-    "train(100000)"
+    "Train(100000)"
    ]
   },
   {
