--- a/reinforcement_learning_gym/cartpole_dqn/cartpole_dqn.ipynb
+++ b/reinforcement_learning_gym/cartpole_dqn/cartpole_dqn.ipynb
@@ -202,7 +202,7 @@
    "outputs": [],
    "source": [
     "// Function to train the agent on mlpack's own implementation of the CartPole environment.\n",
-    "void train(const size_t numSteps)\n",
+    "void Train(const size_t numSteps)\n",
     "{\n",
     "  agent.Deterministic() = false;\n",
     "  std::cout << \"Training for \" << numSteps << \" steps.\" << std::endl;\n",
@@ -367,7 +367,7 @@
    ],
    "source": [
     "// Training the agent for a total of at least 2500 steps.\n",
-    "train(2500)"
+    "Train(2500)"
    ]
   },
   {
@@ -492,7 +492,7 @@
    ],
    "source": [
     "// Training the same agent for a total of at least 5000 episodes.\n",
-    "train(5000)"
+    "Train(5000)"
    ]
   },
   {
