--- a/reinforcement_learning_gym/mountain_car_dqn/mountain_car_dqn.ipynb
+++ b/reinforcement_learning_gym/mountain_car_dqn/mountain_car_dqn.ipynb
@@ -214,7 +214,7 @@
    "outputs": [],
    "source": [
     "// Function to train the agent on the MountainCar-v0 gym environment.\n",
-    "void train(const size_t numSteps)\n",
+    "void Train(const size_t numSteps)\n",
     "{\n",
     "  agent.Deterministic() = false;\n",
     "  std::cout << \"Training for \" << numSteps << \" steps.\" << std::endl;\n",
@@ -312,7 +312,7 @@
    ],
    "source": [
     "// Training the agent for a total of at least 75 episodes.\n",
-    "train(200*75)"
+    "Train(200*75)"
    ]
   },
   {
@@ -480,7 +480,7 @@
    ],
    "source": [
     "// Training the same agent for a total of at least 300 episodes.\n",
-    "train(200*300)"
+    "Train(200*300)"
    ]
   },
   {
