--- a/reinforcement_learning_gym/pendulum_dqn/pendulum_dqn.ipynb
+++ b/reinforcement_learning_gym/pendulum_dqn/pendulum_dqn.ipynb
@@ -216,7 +216,7 @@
    "outputs": [],
    "source": [
     "// Function to train the agent on the Pendulum gym environment.\n",
-    "void train(const size_t numSteps)\n",
+    "void Train(const size_t numSteps)\n",
     "{\n",
     "  agent.Deterministic() = false;\n",
     "  std::cout << \"Training for \" << numSteps << \" steps.\" << std::endl;\n",
@@ -290,7 +290,7 @@
    ],
    "source": [
     "// Training the agent for a total of at least 5000 steps.\n",
-    "train(5000)"
+    "Train(5000)"
    ]
   },
   {
@@ -418,7 +418,7 @@
    ],
    "source": [
     "// Training the same agent for a total of at least 20000 steps.\n",
-    "train(20000)"
+    "Train(20000)"
    ]
   },
   {
