--- a/reinforcement_learning_gym/pendulum_sac/pendulum_sac.ipynb
+++ b/reinforcement_learning_gym/pendulum_sac/pendulum_sac.ipynb
@@ -208,7 +208,7 @@
    "outputs": [],
    "source": [
     "// Function to train the agent on the Pendulum gym environment.\n",
-    "void train(const size_t numSteps)\n",
+    "void Train(const size_t numSteps)\n",
     "{\n",
     "  agent.Deterministic() = false;\n",
     "  std::cout << \"Training for \" << numSteps << \" steps.\" << std::endl;\n",
@@ -283,7 +283,7 @@
    ],
    "source": [
     "// Training the agent for a total of at least 5000 steps.\n",
-    "train(5000)"
+    "Train(5000)"
    ]
   },
   {
@@ -437,7 +437,7 @@
    ],
    "source": [
     "// Training the same agent for a total of at least 40000 steps.\n",
-    "train(40000)"
+    "Train(40000)"
    ]
   },
   {
