Remove binaries and update binder badge path.

--- a/reinforcement_learning_gym/lunar_lander_dqn/lunar_lander_dqn.ipynb
+++ b/reinforcement_learning_gym/lunar_lander_dqn/lunar_lander_dqn.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[![Binder](https://mybinder.org/badge_logo.svg)](https://lab.mlpack.org/v2/gh/mlpack/examples/master?urlpath=lab%2Ftree%2Fq_learning%2Flunar_lander_dqn.ipynb)\n",
+    "[![Binder](https://mybinder.org/badge_logo.svg)](https://lab.mlpack.org/v2/gh/mlpack/examples/master?urlpath=lab%2Ftree%2Freinforcement_learning_gym%2Flunar_lander_dqn%2Flunar_lander_dqn.ipynb)\n",
     "\n",
     "You can easily run this notebook at https://lab.mlpack.org/\n",
     "\n",
