--- a/reinforcement_learning_gym/pendulum_sac/pendulum_sac.ipynb
+++ b/reinforcement_learning_gym/pendulum_sac/pendulum_sac.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[![Binder](https://mybinder.org/badge_logo.svg)](https://lab.mlpack.org/v2/gh/mlpack/examples/master?urlpath=lab%2Ftree%2Fq_learning%2Fpendulum_sac.ipynb)\n",
+    "[![Binder](https://mybinder.org/badge_logo.svg)](https://lab.mlpack.org/v2/gh/mlpack/examples/master?urlpath=lab%2Ftree%2Freinforcement_learning_gym%2Fpendulum_sac%2Fpendulum_sac.ipynb)\n",
     "\n",
     "You can easily run this notebook at https://lab.mlpack.org/\n",
     "\n",
