--- a/portfolio_optimization_nsga2/portfolio-optimization-nsga2-cpp.ipynb
+++ b/portfolio_optimization_nsga2/portfolio-optimization-nsga2-cpp.ipynb
@@ -322,7 +322,7 @@
    "source": [
     "size_t populationSize = paretoFront.n_slices;\n",
     "\n",
-    "//! Store the X, Y coordinates of the Pareto Front\n",
+    "//! Store the X, Y coordinates of the Pareto Front.\n",
     "std::vector<double> frontX(populationSize, 0.);\n",
     "std::vector<double> frontY(populationSize, 0.);\n",
     "\n",
