Revert "Added callback"
This reverts commit af0085e2884af9c5a69af0f8746944d57d5593ba.

Added callback

--- a/portfolio_optimization_nsga2/portfolio-optimization-nsga2-cpp.ipynb
+++ b/portfolio_optimization_nsga2/portfolio-optimization-nsga2-cpp.ipynb
@@ -245,7 +245,7 @@
     "const double lowerBound = 0;\n",
     "const double upperBound = 1;\n",
     "\n",
-    "ens::NSGA2 opt(50, // population size: The number of candidates in the population.\n",
+    "ens::NSGA2 opt(20, // population size: The number of candidates in the population.\n",
     "               300, // max generations: The maximum number of generations allowed.\n",
     "               0.5, // crossover probability: The probability that the elites reproduce.\n",
     "               0.5, // mutation  probability: The probability of mutation among the elite.\n",
@@ -257,6 +257,71 @@
     "\n",
     "arma::mat coords = pf.GetInitialPoint();\n",
     "auto objectives = pf.GetObjectives();"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3. Building Custom Callback"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We would like to query our optimizer after a certain number of generations "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class QueryFront\n",
+    "{\n",
+    " public:\n",
+    "    //! Setup the Callback with user defined queryRate value and paretoFrontArray.\n",
+    "    QueryFront(const size_t queryRate, std::vector<arma::cube>& paretoFrontArray) : \n",
+    "        queryRate(queryRate), \n",
+    "        paretoFrontArray(paretoFrontArray), \n",
+    "        genCounter(0)\n",
+    "        { /* Nothing to do here */ }\n",
+    "    \n",
+    "    template<typename OptimizerType, typename FunctionType, typename MatType>\n",
+    "    void StepTaken(OptimizerType& opt,\n",
+    "                   FunctionType& /* function */,\n",
+    "                   MatType& /* coordinates */)\n",
+    "    {\n",
+    "      if(genCounter % queryRate == 0)\n",
+    "        paretoFrontArray.push_back(opt.ParetoFront());\n",
+    "      \n",
+    "      ++genCounter;\n",
+    "    }\n",
+    "    \n",
+    " private:\n",
+    "    //! A reference to the array of pareto fronts.\n",
+    "    std::vector<arma::cube>& paretoFrontArray;\n",
+    "    //! The rate of query.\n",
+    "    size_t queryRate;\n",
+    "    //! A counter for the current generation.\n",
+    "    size_t genCounter;\n",
+    "};"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "//! We will store the array of pareto fronts in this data structure.\n",
+    "std::vector<arma::cube> paretoFrontArray;\n",
+    "size_t queryRate = 20;\n",
+    "\n",
+    "//! Uncomment to set custom query rate.\n",
+    "// std::cin >> queryRate;"
    ]
   },
   {
@@ -286,7 +351,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "opt.Optimize(objectives, coords);"
+    "opt.Optimize(objectives, coords, QueryFront(20, paretoFrontArray));"
    ]
   },
   {
@@ -322,7 +387,7 @@
    "source": [
     "size_t populationSize = paretoFront.n_slices;\n",
     "\n",
-    "//! Store the X, Y coordinates of the Pareto Front\n",
+    "//! Store the X, Y coordinates of the Pareto Front.\n",
     "std::vector<double> frontX(populationSize, 0.);\n",
     "std::vector<double> frontY(populationSize, 0.);\n",
     "\n",
