--- a/portfolio_optimization_nsga2/portfolio-optimization-nsga2-cpp.ipynb
+++ b/portfolio_optimization_nsga2/portfolio-optimization-nsga2-cpp.ipynb
@@ -27,15 +27,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#define ARMA_DONT_USE_WRAPPER"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "#include <mlpack/xeus-cling.hpp>\n",
     "\n",
     "#include <ensmallen.hpp>\n",
@@ -104,7 +95,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "stocks = \"FB,TSLA\";\n",
+    "stocks = \"AAPL,NKE,GOOGL,AMZN\";\n",
     "\n",
     "//! Uncomment to set custom stocks.\n",
     "// std::cout << \"Type the name of symbol of the stocks via comma separated values (no spaces)\" << std::endl;\n",
@@ -136,7 +127,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "startDate = \"15/01/2020\";\n",
+    "startDate = \"01/01/2015\";\n",
     "\n",
     "//! Uncomment to set custom start-date.\n",
     "// std::cout << \"Starting Date (YYYY/MM/DD or DD/MM/YYYY)\" << std::endl;\n",
@@ -149,7 +140,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "endDate = \"15/01/2021\";\n",
+    "endDate = \"31/12/2019\";\n",
     "\n",
     "//! Uncomment to set custom end-date.\n",
     "// std::cout << \"End Date (YYYY/MM/DD or DD/MM/YYYY)\" << std::endl;\n",
@@ -197,6 +188,20 @@
     "    {\n",
     "      return arma::Col<double>(assets, 1, arma::fill::zeros);\n",
     "    }\n",
+    "    \n",
+    "    struct VolatilityObjective\n",
+    "    {\n",
+    "        VolatilityObjective(const arma::mat& returns) : returns(returns) {}\n",
+    "\n",
+    "        double Evaluate(const arma::mat& coords)\n",
+    "        {\n",
+    "          const double portfolioVolatility = arma::as_scalar(arma::sqrt(\n",
+    "                coords.t() * arma::cov(returns) * 252 * coords));\n",
+    "          return portfolioVolatility;\n",
+    "        }\n",
+    "\n",
+    "        arma::mat returns;\n",
+    "    };\n",
     "\n",
     "    struct ReturnsObjective\n",
     "    {\n",
@@ -214,24 +219,11 @@
     "        arma::mat returns;\n",
     "    };\n",
     "\n",
-    "    struct VolatilityObjective\n",
-    "    {\n",
-    "        VolatilityObjective(const arma::mat& returns) : returns(returns) {}\n",
-    "\n",
-    "        double Evaluate(const arma::mat& coords)\n",
-    "        {\n",
-    "          const double portfolioVolatility = arma::as_scalar(arma::sqrt(\n",
-    "                coords.t() * arma::cov(returns) * 252 * coords));\n",
-    "          return portfolioVolatility;\n",
-    "        }\n",
-    "\n",
-    "        arma::mat returns;\n",
-    "    };\n",
     "\n",
     "    //! Get objective functions.\n",
-    "    std::tuple<ReturnsObjective, VolatilityObjective> GetObjectives()\n",
+    "    std::tuple<VolatilityObjective, ReturnsObjective> GetObjectives()\n",
     "    {\n",
-    "      return std::make_tuple(ReturnsObjective(returns), VolatilityObjective(returns));\n",
+    "      return std::make_tuple(VolatilityObjective(returns), ReturnsObjective(returns));\n",
     "    }\n",
     "\n",
     "    arma::mat returns;\n",
@@ -263,71 +255,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3. Building Custom Callback"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We would like to query our optimizer after a certain number of generations "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class QueryFront\n",
-    "{\n",
-    " public:\n",
-    "    //! Setup the Callback with user defined queryRate value and paretoFrontArray.\n",
-    "    QueryFront(const size_t queryRate, std::vector<arma::cube>& paretoFrontArray) : \n",
-    "        queryRate(queryRate), \n",
-    "        paretoFrontArray(paretoFrontArray), \n",
-    "        genCounter(0)\n",
-    "        { /* Nothing to do here */ }\n",
-    "    \n",
-    "    template<typename OptimizerType, typename FunctionType, typename MatType>\n",
-    "    void StepTaken(OptimizerType& opt,\n",
-    "                   FunctionType& /* function */,\n",
-    "                   MatType& /* coordinates */)\n",
-    "    {\n",
-    "      if(genCounter % queryRate == 0)\n",
-    "        paretoFrontArray.push_back(opt.ParetoFront());\n",
-    "      \n",
-    "      ++genCounter;\n",
-    "    }\n",
-    "    \n",
-    " private:\n",
-    "    //! A reference to the array of pareto fronts.\n",
-    "    std::vector<arma::cube>& paretoFrontArray;\n",
-    "    //! The rate of query.\n",
-    "    size_t queryRate;\n",
-    "    //! A counter for the current generation.\n",
-    "    size_t genCounter;\n",
-    "};"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "//! We will store the array of pareto fronts in this data structure.\n",
-    "std::vector<arma::cube> paretoFrontArray;\n",
-    "size_t queryRate = 20;\n",
-    "\n",
-    "//! Uncomment to set custom query rate.\n",
-    "// std::cin >> queryRate;"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### 3. Optimization "
    ]
   },
@@ -335,7 +262,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The NSGA2 is a genetic algorithm which works by assigning fitness to each population member based on its collective performance on all the objectives. A member \"dominates\" another if it's assigned fitness is better than other, this results in an \"elite\" population. The elite population reproduce among themselves to produce superior off-springs. This process is done iteratively to arrive at an optimal set of solution known as the \"Pareto Front\". "
+    "The NSGA2 is a genetic algorithm which works by assigning fitness to each population member based on its collective performance on all the objectives. A member \"dominates\" another if it's assigned fitness is better than other, this results in an \"elite\" population. The elite population reproduce among themselves to produce superior off-springs. This process is done iteratively to arrive at an optimal set of solution known as the \"Pareto Front\". \n",
+    "\n",
+    "The dominance relation is as follows:\n",
+    "\n",
+    "$$x_1\\ \\preceq_{D}\\ x_2$$ if $x_1$ is better than or equivalent to $x_2$ in all the specified objectives.\n",
+    "\n",
+    "where $\\preceq_{D}$ is the dominance symbol. "
    ]
   },
   {
@@ -351,7 +284,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "opt.Optimize(objectives, coords, QueryFront(20, paretoFrontArray));"
+    "opt.Optimize(objectives, coords);"
    ]
   },
   {
@@ -393,10 +326,11 @@
     "\n",
     "for (size_t idx = 0; idx < populationSize; ++idx)\n",
     "{\n",
+    "\n",
+    "    frontX[idx] = paretoFront.slice(idx)(0);\n",
     "    // Append negative again to restore the original \n",
     "    // maximization objective.\n",
-    "    frontX[idx] = -paretoFront.slice(idx)(0);\n",
-    "    frontY[idx] = paretoFront.slice(idx)(1);\n",
+    "    frontY[idx] = -paretoFront.slice(idx)(1);\n",
     "}"
    ]
   },
@@ -411,7 +345,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As said before, we desire higher returns and lower volatility. The Pareto Front generated gives an optimal set of solutions such that, higher volatility is traded-off with higher returns and vice-versa. Hence, all the solutions are \"optimal\". Based on user's preference, he/she can choose their solution from the generated front."
+    "As said before, we desire higher returns and lower volatility. The Pareto Front generated gives an optimal set of solutions such that, higher volatility is traded-off with higher returns and vice-versa. Hence, all the solutions are \"optimal\". Based on user's preference, he/she can choose their solution from the generated front.\n",
+    "\n",
+    "The Axis Labels are as follows:\n",
+    "\n",
+    "X-Axis: Volatility\n",
+    "\n",
+    "Y-Axis: Returns\n",
+    "\n",
+    "We expect an increase in volatility with increase in returns."
    ]
   },
   {
@@ -423,8 +365,8 @@
     "plt::figure_size(800, 800);\n",
     "plt::scatter(frontX, frontY, 50);\n",
     "\n",
-    "plt::xlabel(\"Returns Objective\");\n",
-    "plt::ylabel(\"Volatility Objective\");\n",
+    "plt::xlabel(\"Returns\");\n",
+    "plt::ylabel(\"Volatility\");\n",
     "\n",
     "plt::title(\"The Pareto Front\");\n",
     "plt::legend();\n",
