added markdown explaining the dataset & approach

--- a/salary_prediction_with_linear_regression/salary-prediction-linear-regression-cpp.ipynb
+++ b/salary_prediction_with_linear_regression/salary-prediction-linear-regression-cpp.ipynb
@@ -1,8 +1,26 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "94323844",
+   "metadata": {},
+   "source": [
+    "## Predicting Salary using Linear Regression\n",
+    "\n",
+    "### Objective\n",
+    "* We have to predict the salary of an employee given how many years of experience they have.\n",
+    "\n",
+    "### Dataset\n",
+    "* Salary_Data.csv has 2 columns — “Years of Experience” and “Salary” for 30 employees in a company\n",
+    "\n",
+    "### Approach\n",
+    "* So in this example, we will train a Linear Regression model to learn the correlation between the number of years of experience of each employee and their respective salary. \n",
+    "* Once the model is trained, we will be able to do some sample predictions."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "behavioral-cycling",
    "metadata": {},
    "outputs": [],
@@ -17,31 +35,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "stupid-permission",
+   "execution_count": null,
+   "id": "db43325d",
    "metadata": {},
    "outputs": [],
    "source": [
     "#define WITHOUT_NUMPY 1\n",
     "#include \"matplotlibcpp.h\"\n",
-    "#include \"xwidgets/ximage.hpp\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "indian-prairie",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "using namespace mlpack;\n",
-    "using namespace mlpack::regression;\n",
+    "#include \"xwidgets/ximage.hpp\"\n",
+    "\n",
     "namespace plt = matplotlibcpp;"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
+   "id": "9065ebb1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "using namespace mlpack;\n",
+    "using namespace mlpack::regression;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "victorian-donna",
    "metadata": {},
    "outputs": [],
@@ -54,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "deluxe-present",
    "metadata": {},
    "outputs": [],
@@ -66,25 +85,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "desirable-experience",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Years Of Experience    Salary\n",
-      "   1.1000e+00   3.9343e+04\n",
-      "   1.3000e+00   4.6205e+04\n",
-      "   1.5000e+00   3.7731e+04\n",
-      "   2.0000e+00   4.3525e+04\n",
-      "   2.2000e+00   3.9891e+04\n",
-      "   2.9000e+00   5.6642e+04\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "// Display the first 5 rows of the input data\n",
     "\n",
@@ -104,19 +108,19 @@
     "std::vector<double> x = arma::conv_to<std::vector<double>>::from(inputs.row(0));\n",
     "std::vector<double> y = arma::conv_to<std::vector<double>>::from(inputs.row(1));\n",
     "\n",
-    "plt::scatter(x, y, 12, {{\"color\", \"coral\"}});\n",
+    "matplotlibcpp::scatter(x, y, 12, {{\"color\", \"coral\"}});\n",
     "plt::xlabel(\"Years of Experience\");\n",
     "plt::ylabel(\"Salary in $\");\n",
     "plt::title(\"Experience vs. Salary\");\n",
     "\n",
-    "plt::save(\"./scatter1.png\");\n",
+    "matplotlibcpp::save(\"./scatter1.png\");\n",
     "auto img = xw::image_from_file(\"scatter.png\").finalize();\n",
     "img"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "coordinate-canvas",
    "metadata": {},
    "outputs": [],
@@ -129,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "blank-mexican",
    "metadata": {},
    "outputs": [],
@@ -141,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "mechanical-laundry",
    "metadata": {},
    "outputs": [],
@@ -166,6 +170,14 @@
     "\n",
     "arma::rowvec y_train = arma::conv_to<arma::rowvec>::from(Ytrain);\n",
     "arma::rowvec y_test = arma::conv_to<arma::rowvec>::from(Ytest);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "99955e22",
+   "metadata": {},
+   "source": [
+    "## Linear Model"
    ]
   },
   {
@@ -236,9 +248,9 @@
    "source": [
     "// Model evaluation metrics\n",
     "\n",
-    "std::cout<<\"Mean Absolute Error: \"<<arma::mean(arma::abs(y_preds - y_test))<<std::endl;\n",
-    "std::cout<<\"Mean Squared Error: \"<<arma::mean(arma::pow(y_preds - y_test,2))<<std::endl;\n",
-    "std::cout<<\"Root Mean Squared Error: \"<<sqrt(arma::mean(arma::pow(y_preds - y_test,2)))<<std::endl;"
+    "std::cout << \"Mean Absolute Error: \" << arma::mean(arma::abs(y_preds - y_test)) << std::endl;\n",
+    "std::cout << \"Mean Squared Error: \" << arma::mean(arma::pow(y_preds - y_test,2)) << std::endl;\n",
+    "std::cout << \"Root Mean Squared Error: \" << sqrt(arma::mean(arma::pow(y_preds - y_test,2))) << std::endl;"
    ]
   }
  ],
