fixed minor grammer mistakes in markdown
Co-authored-by: Marcus Edel <marcus.edel@fu-berlin.de>

--- a/salary_prediction_with_linear_regression/salary-prediction-linear-regression-py.ipynb
+++ b/salary_prediction_with_linear_regression/salary-prediction-linear-regression-py.ipynb
@@ -500,7 +500,7 @@
    "id": "9f0899be-5069-432a-a3d3-b5c7f33c8417",
    "metadata": {},
    "source": [
-    "From the above metrics we can notice that our model MAE is ~4K, which is relatively small compared to our average salary of $76003, from this we can conclude our model is resonably good fit."
+    "From the above metrics, we can notice that our model MAE is ~4K, which is relatively small compared to our average salary of $76003, from this we can conclude our model is a reasonably good fit."
    ]
   }
  ],
