added url to fetch dataset

--- a/salary_prediction_with_linear_regression/salary-prediction-linear-regression-cpp.ipynb
+++ b/salary_prediction_with_linear_regression/salary-prediction-linear-regression-cpp.ipynb
@@ -20,7 +20,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 1,
+   "id": "189dc5ff-22c4-4502-89a8-75e5ce51f3e1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!wget -q https://mlpack.org/datasets/Salary_Data.csv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "id": "behavioral-cycling",
    "metadata": {},
    "outputs": [],
@@ -36,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 3,
    "id": "db43325d",
    "metadata": {},
    "outputs": [],
@@ -50,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 4,
    "id": "9065ebb1",
    "metadata": {},
    "outputs": [],
@@ -61,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 5,
    "id": "victorian-donna",
    "metadata": {},
    "outputs": [],
@@ -74,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 6,
    "id": "deluxe-present",
    "metadata": {},
    "outputs": [],
@@ -86,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 7,
    "id": "desirable-experience",
    "metadata": {},
    "outputs": [
@@ -114,22 +124,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 8,
    "id": "associate-fifteen",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "863dbaf827314170867bda7c7092f00b",
+       "model_id": "912d932e54c14571a0ac726764dac35f",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "A Jupyter widget with unique id: 863dbaf827314170867bda7c7092f00b"
+       "A Jupyter widget with unique id: 912d932e54c14571a0ac726764dac35f"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -154,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 9,
    "id": "coordinate-canvas",
    "metadata": {},
    "outputs": [],
@@ -167,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 10,
    "id": "blank-mexican",
    "metadata": {},
    "outputs": [],
@@ -191,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 11,
    "id": "mechanical-laundry",
    "metadata": {},
    "outputs": [],
@@ -207,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 12,
    "id": "friendly-petersburg",
    "metadata": {},
    "outputs": [],
@@ -235,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 13,
    "id": "published-illustration",
    "metadata": {},
    "outputs": [],
@@ -247,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 14,
    "id": "detailed-mystery",
    "metadata": {},
    "outputs": [],
@@ -260,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 15,
    "id": "indian-ambassador",
    "metadata": {},
    "outputs": [],
@@ -274,22 +284,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 16,
    "id": "related-approach",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c801c911f58343879350d4e837eb8e1b",
+       "model_id": "88f7de7663bd431382ce760f7f8a08a0",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "A Jupyter widget with unique id: c801c911f58343879350d4e837eb8e1b"
+       "A Jupyter widget with unique id: 88f7de7663bd431382ce760f7f8a08a0"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
