--- a/salary_prediction_with_linear_regression/salary-prediction-linear-regression-py.ipynb
+++ b/salary_prediction_with_linear_regression/salary-prediction-linear-regression-py.ipynb
@@ -54,7 +54,7 @@
    "outputs": [],
    "source": [
     "# Load the salary dataset.\n",
-    "data = pd.read_csv(\"Salary_Data.csv\")"
+    "data = pd.read_csv(\"https://mlpack.org/datasets/Salary_Data.csv\")"
    ]
   },
   {
