python nb completed, visualization pending in c++ nb

--- a/avocado_price_prediction_with_linear_regression/avocado_price_prediction_with_lr_cpp.ipynb
+++ b/avocado_price_prediction_with_linear_regression/avocado_price_prediction_with_lr_cpp.ipynb
@@ -8,7 +8,7 @@
     "### Predicting Avocado's Average Price using Linear Regression\n",
     "\n",
     "### Objective\n",
-    "* Out target is to predict the future price of avocado's depending on various features (Type, Region, Total Bags, ...)\n",
+    "* Our target is to predict the future price of avocado's depending on various features (Type, Region, Total Bags, ...)\n",
     "\n",
     "### Dataset\n",
     "Avocado Prices dataset has the following features:\n",
