added visualization bindings for cpp notebook, pending works in header file

--- a/avocado_price_prediction_with_linear_regression/avocado_price_prediction_with_lr_cpp.ipynb
+++ b/avocado_price_prediction_with_linear_regression/avocado_price_prediction_with_lr_cpp.ipynb
@@ -56,6 +56,7 @@
     "#define WITHOUT_NUMPY 1\n",
     "#include \"matplotlibcpp.h\"\n",
     "#include \"xwidgets/ximage.hpp\"\n",
+    "#include \"../utils/plot.hpp\"\n",
     "\n",
     "namespace plt = matplotlibcpp;"
    ]
@@ -127,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 9,
    "id": "7619f5f1-7e33-4257-9868-999593810d96",
    "metadata": {},
    "outputs": [
@@ -157,7 +158,147 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 10,
+   "id": "9c2b6725-f2ea-4e1b-ae0e-2fbc2cf71833",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "405f639f26d74173b4645eb13d64d53c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "A Jupyter widget with unique id: 405f639f26d74173b4645eb13d64d53c"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "scatter(\"avocado.csv\", \"conventional\");\n",
+    "auto img = xw::image_from_file(\"cscatter_conventional.png\").finalize();\n",
+    "img"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "aadbc14a-8ff4-4269-a6f5-f25f1a5f1b68",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "dfcc56bb0edf4771bf51907f81b0e586",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "A Jupyter widget with unique id: dfcc56bb0edf4771bf51907f81b0e586"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "scatter(\"avocado.csv\", \"organic\");\n",
+    "auto img = xw::image_from_file(\"cscatter_organic.png\").finalize();\n",
+    "img"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "baebdee8-e33c-4e98-80ff-5cbc83c71284",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "fd9fb61cc84f40a7abf71c3cf9056bdb",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "A Jupyter widget with unique id: fd9fb61cc84f40a7abf71c3cf9056bdb"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "barplot(\"avocado.csv\", \"AveragePrice\", \"region\", \"Avg.Price of Avocado by Region\", 8, 10);\n",
+    "auto img = xw::image_from_file(\"cbarplot_Avg.Price of Avocado by Region.png\").finalize();\n",
+    "img"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "181dd76f-f9a1-4e87-9c67-069f4386041f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "73493b2dde3b4ea9902b655a4556c506",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "A Jupyter widget with unique id: 73493b2dde3b4ea9902b655a4556c506"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "barplot(\"avocado.csv\", \"type\", \"AveragePrice\", \"Avg.Price of Avocado by Type\");\n",
+    "auto img = xw::image_from_file(\"cbarplot_Avg.Price of Avocado by Type.png\").finalize();\n",
+    "img"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "8926f7d1-faa5-47c6-aed4-fe7c37035b09",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "7e51b7aab0a442a38baf8bb8a6ca00bd",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "A Jupyter widget with unique id: 7e51b7aab0a442a38baf8bb8a6ca00bd"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "heatmap(\"avocado.csv\",\"coolwarm\", \"Correlation Heatmap\", true);\n",
+    "auto img = xw::image_from_file(\"cheatmap_Correlation Heatmap.png\").finalize();\n",
+    "img"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "id": "e26a5936-d0ee-474a-a733-7b8063b3a672",
    "metadata": {},
    "outputs": [],
@@ -168,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 16,
    "id": "a89befd5-ba75-4acc-bf11-fa55b9a91ba1",
    "metadata": {},
    "outputs": [
@@ -178,7 +319,7 @@
        "66"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -189,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 17,
    "id": "536d598e-9894-4047-96fa-82ac14ded328",
    "metadata": {},
    "outputs": [],
@@ -199,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 18,
    "id": "30bba7d3-0c09-4472-bf6f-1150b13535a1",
    "metadata": {},
    "outputs": [],
@@ -209,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 19,
    "id": "e9de23c5-4d88-4d25-a157-05bb7650685c",
    "metadata": {},
    "outputs": [
@@ -219,7 +360,7 @@
        "{ 64236.620, 1036.7400, 54454.850, 48.160000, 8696.8700, 8603.6200, 93.250000, 0.0000000, 1.0000000, 0.0000000, 2015.0000, 1.0000000, 0.0000000, 0.0000000, 0.0000000, 0.0000000, 0.0000000, 0.0000000, 0.0000000, 0.0000000, 0.0000000, 0.0000000, 0.0000000, 0.0000000, 0.0000000, 0.0000000, 0.0000000, 0.0000000, 0.0000000, 0.0000000, 0.0000000, 0.0000000, 0.0000000, 0.0000000, 0.0000000, 0.0000000, 0.0000000, 0.0000000, 0.0000000, 0.0000000, 0.0000000, 0.0000000, 0.0000000, 0.0000000, 0.0000000, 0.0000000, 0.0000000, 0.0000000, 0.0000000, 0.0000000, 0.0000000, 0.0000000, 0.0000000, 0.0000000, 0.0000000, 0.0000000, 0.0000000, 0.0000000, 0.0000000, 0.0000000, 0.0000000, 0.0000000, 0.0000000, 0.0000000, 0.0000000 }"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -230,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 20,
    "id": "c39b65dd-aa03-4281-a057-86d4f8b293b6",
    "metadata": {},
    "outputs": [],
@@ -243,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 21,
    "id": "b4e567e6-4d54-43cb-b94f-b77776128877",
    "metadata": {},
    "outputs": [],
@@ -253,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 22,
    "id": "3f936744-df4a-44d0-ac13-b2614fb06960",
    "metadata": {},
    "outputs": [],
@@ -264,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 23,
    "id": "97fdc354-57d0-4e28-91e8-1d707fc24226",
    "metadata": {},
    "outputs": [],
@@ -274,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 24,
    "id": "5d4cd76e-3a6b-4f4b-9bde-002acf0d126e",
    "metadata": {},
    "outputs": [],
@@ -285,37 +426,99 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
-   "id": "cd46e5ca-6192-4a63-b662-8278b6ba303b",
+   "execution_count": 25,
+   "id": "e25fa64a-e728-43ad-abfb-d8e385a62d73",
    "metadata": {},
    "outputs": [],
    "source": [
-    "std::vector<double> yTestPlot = arma::conv_to<std::vector<double>>::from(Ytest);\n",
-    "std::vector<double> yPredsPlot = arma::conv_to<std::vector<double>>::from(yPreds);\n"
+    "arma::mat preds;\n",
+    "preds.insert_rows(0, yTest);\n",
+    "preds.insert_rows(1, yPreds);"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
-   "id": "212b13a9-77c9-4b71-96fa-46fb66f7f461",
+   "execution_count": 26,
+   "id": "020e0c3e-81bc-4bcb-be8d-4febdf8b97ee",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mlpack::data::Save(\"predictions.csv\", preds);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "71a54770-db87-4b69-abdd-9efba5accccf",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "44fcb4267b534cc19217bcff32a0522d",
+       "model_id": "913ae034151b4f11b2a2fc57afbb798f",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "A Jupyter widget with unique id: 44fcb4267b534cc19217bcff32a0522d"
+       "A Jupyter widget with unique id: 913ae034151b4f11b2a2fc57afbb798f"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
+   "source": [
+    "lmplot(\"predictions.csv\");\n",
+    "auto img = xw::image_from_file(\"clmplot_predictions.csv.png\").finalize();    \n",
+    "img"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "e8d8626e-81b3-498e-851d-59d49c937c01",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c3ce801edb0848039d0975c661290c69",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "A Jupyter widget with unique id: c3ce801edb0848039d0975c661290c69"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "histplot(\"predictions.csv\", \"Distribution of residuals\");\n",
+    "auto img = xw::image_from_file(\"chistplot_Distribution of residuals.png\").finalize();    \n",
+    "img"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cd46e5ca-6192-4a63-b662-8278b6ba303b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "std::vector<double> yTestPlot = arma::conv_to<std::vector<double>>::from(Ytest);\n",
+    "std::vector<double> yPredsPlot = arma::conv_to<std::vector<double>>::from(yPreds);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "212b13a9-77c9-4b71-96fa-46fb66f7f461",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "// Visualize Predicted datapoints.\n",
     "plt::figure_size(800, 800);\n",
@@ -350,10 +553,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "8b323dc0-61f8-43c1-ae8a-38027c04ff88",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean Absolute Error: 0.204229\n",
+      "Mean Squared Error: 0.0749513\n",
+      "Root Mean Squared Error: 0.273772\n"
+     ]
+    }
+   ],
    "source": [
     "// Model evaluation metrics.\n",
     "\n",
