--- a/avocado_price_prediction_with_linear_regression/avocado_price_prediction_with_lr_py.ipynb
+++ b/avocado_price_prediction_with_linear_regression/avocado_price_prediction_with_lr_py.ipynb
@@ -652,7 +652,7 @@
    "id": "a3b0f6df-b3fa-4102-958b-079ddf4a3354",
    "metadata": {},
    "source": [
-    "As we can from the heatmap above, all the Features are not corroleted with the Average Price column, instead most of them are correlated with each other. "
+    "As we can from the heatmap above, all the Features are not correlated with the Average Price column, instead most of them are correlated with each other. "
    ]
   },
   {
@@ -728,10 +728,9 @@
    "id": "d4f17b20-e452-4e54-8a0c-ccdd3423f1fa",
    "metadata": {},
    "source": [
-    "\n",
     "### Train Test Split\n",
     "\n",
-    "The dataset has to be split into a training set and a test set. Here the dataset has 18249 observations and the testRatio is taken as 20% of the total observations. This indicates the test set should have 20% * 18249 = 3649 observations and training test should have 14600 observations respectively.\n"
+    "The dataset has to be split into a training set and a test set. Here the dataset has 18249 observations and the testRatio is taken as 20% of the total observations. This indicates the test set should have 20% * 18249 = 3649 observations and training test should have 14600 observations respectively."
    ]
   },
   {
