added remote dataset sources in notebooks

--- a/avocado_price_prediction_with_linear_regression/avocado_price_prediction_with_lr_cpp.ipynb
+++ b/avocado_price_prediction_with_linear_regression/avocado_price_prediction_with_lr_cpp.ipynb
@@ -34,6 +34,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "id": "ac3caf12-b4f2-4dc3-bf7a-0e855d6f245e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!wget -q https://mlpack.org/datasets/avocado.csv.gz"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "1bbdb43e-e14e-4c36-aa1e-3312739b9858",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!gzip -d avocado.csv.gz"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "id": "3d374b30-e54a-4990-b191-aade8144d0a6",
    "metadata": {},
