--- a/avocado_price_prediction_with_linear_regression/avocado_price_prediction_with_lr_py.ipynb
+++ b/avocado_price_prediction_with_linear_regression/avocado_price_prediction_with_lr_py.ipynb
@@ -35,6 +35,26 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "270647b8-70a7-443d-b53c-2d533b88def0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!wget -q https://mlpack.org/datasets/avocado.csv.gz"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "da970605-0e8f-4767-9177-cf7264a32e48",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!gzip -d avocado.csv.gz"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
    "id": "916a3d8e-547c-461a-a90f-7bcbd60c7504",
    "metadata": {},
    "outputs": [],
